# internal/dto/auth.go
@@ -1,0 +1,6 @@
+package dto
+
+type AuthDTO struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
+}
